<resources>
    <string name="app_name">Android2_2</string>
    <string name="city">Город </string>
    <string name="update_data">Обновить данные</string>
    <string name="string_null">-</string>
    <string name="temperature">Температура</string>
    <string name="wind">Ветер</string>
    <string name="wetness">Влажность</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">City name</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="lat_lon">lt/ln: </string>
    <string name="condition">Состояние</string>
    <string name="menu_title_history">history</string>
    <string name="content_provider">contacts</string>

    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите
узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно.
Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная
локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>

</resources>