<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentDetailsBackground"
    tools:context=".view.details.DetailsFragment">

    <TextView
        android:id="@+id/textview_city"
        style="@style/forLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/lat_lon"
        android:textColor="@color/colorForCoordinates"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_city" />


    <TextView
        android:id="@+id/textview_city_result"
        style="@style/forResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_coordinates"

        />

    <TextView
        android:id="@+id/textview_temperature"
        style="@style/forLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_city_result" />

    <TextView
        android:id="@+id/textview_temperature_result"
        style="@style/forResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_temperature" />

    <TextView
        android:id="@+id/textview_wind"
        style="@style/forLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_temperature_result" />

    <TextView
        android:id="@+id/textview_wind_result"
        style="@style/forResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_wind" />

    <TextView
        android:id="@+id/textview_wetness"
        style="@style/forLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wetness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_wind_result" />

    <TextView
        android:id="@+id/textview_wetness_result"
        style="@style/forResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_wetness" />


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/downloading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_for_downloading_layout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <ProgressBar
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>





















